--- a/COMP306.LibraryManagement.APP/appsettings.json
+++ b/COMP306.LibraryManagement.APP/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "MySql": "Server=comp-306-library-management.mysql.database.azure.com;Database=preprod;User ID=comp306;Password=test1234!"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
