--- a/COMP306.LibraryManagement.COM/COMP306.LibraryManagement.COM.csproj
+++ b/COMP306.LibraryManagement.COM/COMP306.LibraryManagement.COM.csproj
@@ -8,8 +8,10 @@
 
   <ItemGroup>
     <None Remove="Enum\" />
+    <None Remove="Model\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Enum\" />
+    <Folder Include="Model\" />
   </ItemGroup>
 </Project>
