fix issues on BUS layer

--- a/COMP306.LibraryManagement.APP/COMP306.LibraryManagement.APP.csproj
+++ b/COMP306.LibraryManagement.APP/COMP306.LibraryManagement.APP.csproj
@@ -43,4 +43,10 @@
     <Folder Include="Views\Login\" />
     <Folder Include="Views\Register\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Remove="appsettings.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="appsettings.json" />
+  </ItemGroup>
 </Project>
